samples/_failures_safe/1761169326_be8b5a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_32bdafb0.c: In function ‘process_event’:
./samples/SAFE/__tmp_32bdafb0.c:178:25: error: incompatible types when assigning to type ‘enum State’ from type ‘enum State (*)(struct StateMachine *, struct EventData *)’
  178 |             new_state = handle_processing_state
      |                         ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_32bdafb0.c:178:48: error: expected ‘;’ at end of input
  178 |             new_state = handle_processing_state
      |                                                ^
      |                                                ;
./samples/SAFE/__tmp_32bdafb0.c:178:13: error: expected declaration or statement at end of input
  178 |             new_state = handle_processing_state
      |             ^~~~~~~~~
./samples/SAFE/__tmp_32bdafb0.c:178:13: error: expected declaration or statement at end of input
